--- a/pkgs/script-exec/Cargo.toml
+++ b/pkgs/script-exec/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.1", features = ["derive"] }
-log = "0.4"
 env_logger = "0.10"
 crossterm = "0.29.0"
+
+[dev-dependencies]
+insta-cmd = "0.6.0"
