--- a/pkgs/script-exec/Cargo.toml
+++ b/pkgs/script-exec/Cargo.toml
@@ -9,4 +9,5 @@ env_logger = "0.10"
 crossterm = "0.29.0"
 
 [dev-dependencies]
+insta = { version = "1.43.1", features = ["filters"] }
 insta-cmd = "0.6.0"
