--- a/pkgs/script-exec/Cargo.toml
+++ b/pkgs/script-exec/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 clap = { version = "4.1", features = ["derive"] }
 env_logger = "0.10"
 crossterm = "0.29.0"
+indexmap = "2.9.0"
 
 [dev-dependencies]
 insta = { version = "1.43.1", features = ["filters"] }
